[gd_scene load_steps=7 format=3 uid="uid://bq865rkdcos1b"]

[ext_resource type="Texture2D" uid="uid://dkcfnmduc3w8j" path="res://Sprout Lands - Sprites - Basic pack/Objects/mar.png" id="1_715ml"]
[ext_resource type="Script" uid="uid://djijfnfjiqdkv" path="res://Scripturi/hand.gd" id="2_4h5jc"]

[sub_resource type="CanvasTexture" id="CanvasTexture_715ml"]

[sub_resource type="Theme" id="Theme_715ml"]
default_font_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_715ml"]
bg_color = Color(0, 0, 0, 0.333333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o4p81"]
size = Vector2(7, 5.71695)

[node name="PanelContainer" type="TextureRect"]
self_modulate = Color(0, 0, 0, 0.647059)
show_behind_parent = true
custom_minimum_size = Vector2(0, 500)
anchors_preset = -1
anchor_right = 0.26
anchor_bottom = 1.0
offset_right = 0.47998
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("CanvasTexture_715ml")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
anchor_bottom = 0.994
offset_right = 300.0
offset_bottom = 9.888

[node name="InfoLabel" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 350)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme = SubResource("Theme_715ml")
theme_override_styles/normal = SubResource("StyleBoxFlat_715ml")
bbcode_enabled = true
text = "[center]

"
scroll_active = false

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.975
anchor_right = 0.5
anchor_bottom = 0.975
offset_left = -150.0
offset_top = -277.8
offset_right = 150.0
offset_bottom = 22.2
texture = ExtResource("1_715ml")
expand_mode = 4
stretch_mode = 5

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(150, 499)
scale = Vector2(8.087, 9)
offset = Vector2(0, 90)
script = ExtResource("2_4h5jc")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="sprite/Area2D"]
position = Vector2(0, 0.0058403)
shape = SubResource("RectangleShape2D_o4p81")

[connection signal="mouse_entered" from="." to="sprite" method="_on_panel_container_mouse_entered"]
[connection signal="mouse_exited" from="." to="sprite" method="_on_panel_container_mouse_exited"]
